# ribdif

./: .gitignore  Dockerfile  MANIFEST.in  README.md  index.html  pyproject.toml
.biolib/: config.yml
docs/: default.primers
results/Capnocytophaga/: Capnocytophaga_summary.tsv
results/Capnocytophaga/amplicons/: Capnocytophaga-my_v3v4.summary  Capnocytophaga-my_v3v4.summary_0  Capnocytophaga-my_v3v4.summary_1  Capnocytophaga-my_v3v4.summary_10  Capnocytophaga-my_v3v4.summary_11  Capnocytophaga-my_v3v4.summary_12  Capnocytophaga-my_v3v4.summary_13  Capnocytophaga-my_v3v4.summary_14  Capnocytophaga-my_v3v4.summary_15  Capnocytophaga-my_v3v4.summary_16  Capnocytophaga-my_v3v4.summary_17  Capnocytophaga-my_v3v4.summary_18  Capnocytophaga-my_v3v4.summary_19  Capnocytophaga-my_v3v4.summary_2  Capnocytophaga-my_v3v4.summary_20  Capnocytophaga-my_v3v4.summary_21  Capnocytophaga-my_v3v4.summary_22  Capnocytophaga-my_v3v4.summary_23  Capnocytophaga-my_v3v4.summary_24  Capnocytophaga-my_v3v4.summary_25  Capnocytophaga-my_v3v4.summary_26  Capnocytophaga-my_v3v4.summary_27  Capnocytophaga-my_v3v4.summary_28  Capnocytophaga-my_v3v4.summary_29  Capnocytophaga-my_v3v4.summary_3  Capnocytophaga-my_v3v4.summary_4  Capnocytophaga-my_v3v4.summary_5  Capnocytophaga-my_v3v4.summary_6  Capnocytophaga-my_v3v4.summary_7  Capnocytophaga-my_v3v4.summary_8  Capnocytophaga-my_v3v4.summary_9  Capnocytophaga-my_v3v4.temp.amplicons  Capnocytophaga-v1v9.summary  Capnocytophaga-v1v9.tree  Capnocytophaga-v1v9.uc  Capnocytophaga-v3v4-meta.csv  Capnocytophaga-v3v4.tree  Capnocytophaga-v3v4.uc
results/Capnocytophaga/genbank/bacteria/test3/: test3.16sAln  test3.16sTree
results/Capnocytophaga/genbank/bacteria/test3/ani/: .Rhistory  ANIm_similarity_errors.tab
ribdif/: __init__.py  __main__.py  barrnap_run.py  custom_exceptions.py  figures.py  logging_config.py  make_heatmap.py  make_heatmaps.py  msa_run.py  ngd_download.py  overlaps.py  pcr_run.py  pyani_run.py  summary_16S.py  summary_files.py  utils.py  vsearch_run.py
