[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ribDif"
version = "1.0.3"
authors = [
  { name="Robert Murphy", email="Robert.murphy@bio.ku.dk" },
]
description = "A program to analyse the usefulness of amplicon sequences"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Rob-murphys/RibDif2"
"Bug Tracker" = "https://github.com/Rob-murphys/RibDif2/issues"