[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ribdif"
version = "1.1.1"
authors = [
  { name="Robert Murphy", email="Robert.murphy@bio.ku.dk" },
]
description = "A program to analyse and correct for  the usefulness of amplicon sequences"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
  "pandas >= 1.5.2",
  "biopython >= 1.80",
  "numpy >= 1.24.1",
  "matplotlib >= 3.6.2",
  "seaborn >= 0.12.2",
  "scipy >= 1.10.0",
  "ncbi_genome_download >= 0.3.1"
]


[project.urls]
"Homepage" = "https://github.com/Rob-murphys/RibDif2"
"Bug Tracker" = "https://github.com/Rob-murphys/RibDif2/issues"





